2015-06-02 Yann LEYDIER <yann@leydier.info>
	* SimplifyCurve: Rewritten.

2015-06-01 Yann LEYDIER <yann@leydier.info>
	* Word (ClearAlignement): Added.
	* Project (ClearAlignement): Added.
	* GUI (add_line): Implemented.
	* GUI (rem_line): Added.
	* GUI (on_rmb_click): Now pops a menu up when clicking on a line.

2015-05-29 Yann LEYDIER <yann@leydier.info>
	* GUI: Reactivated UI to add lines.

2015-03-17 Yann LEYDIER <yann@leydier.info>
	* ValidationPanel (add_element): Now takes one extra argument for the position
		 in the word.
	* GUI (display_search): Now displays all occurrences in a same word.

2015-03-12 Yann LEYDIER <yann@leydier.info>
	* Project (ComputeWordFrontiers): Added.
	* GUI: Reactivated on-image line and word edition.
	* Align: Bugfix. Added condition to avoid empty segments. Added condition
					for equivalent paths.
	* ImageSignature (cutproba): Added.

2015-03-11 Yann LEYDIER <yann@leydier.info>
	* GUI: Show lines/words/characters now a radio group. Added keyboard
			shortcuts.
	* GUI (edit_overlays): Added.

2015-03-04 Yann LEYDIER <yann@leydier.info>
	* Document (read_tei): Now ignores <cb> with @rend="hidden".
	* TEIImporter (fill_tree): Now <note> and <teiHeader> are uncheck by
														 default.

2015-03-03 Yann LEYDIER <yann@leydier.info>
	* GUI (display_search): Bugfix.

2014-12-16 Yann LEYDIER <yann@leydier.info>
	* TEIImporter (fill_tree): Added more elements to select/deselect.
	* DetectLines: Now merges facing lines.

2014-12-15 Yann LEYDIER <yann@leydier.info>
	* TEIImporter: Refactored.
	* TEINode: Removed.
	* EntityManager (ExpandXML): Rewritten.
	* GUI (fill_tree): Now escapes special characters.
	* Document (read_tei): Now reads <pc>.

2014-11-18 Yann LEYDIER <yann@leydier.info>
	* DetectLines, detectColumns: Now uses the read TEI structure to guide the segmentation.

2014-09-25 Yann LEYDIER <yann@leydier.info>
	* ValidationPanel (load_tooltip_img): Now frontiers are red.

2014-09-24 Yann LEYDIER <yann@leydier.info>